--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Charanreddy27.github.io/portfolio-application",
+  "homepage": "https://Charanreddy27.github.io/portfolio-application",
   "name": "portfolioyoutube",
   "version": "0.1.0",
   "private": true,
